// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`will alias tables which have a schema 1`] = `
	select
	  \`COUNT(*)\` as \`count\`
	from
	  \`foo\`
	where
	  \`foo\`.\`color\` = 'red'
`;

exports[`will join using function 1`] = `
	select
	  \`COUNT(*)\` as \`count\`
	from
	  \`foo\`
	  inner join \`bar\` on \`bar\`.\`name\` <> \`foo\`.\`name\`
	  and \`bar\`.\`color\` = \`foo\`.\`color\`
	where
	  \`foo\`.\`name\` <> 'Danny'
	  and \`bar\`.\`rating\` > 50
`;

exports[`will join using object 1`] = `
	select
	  \`COUNT(*)\` as \`count\`
	from
	  \`foo\`
	  inner join \`bar\` on \`bar\`.\`color\` = \`foo\`.\`color\`
	  inner join \`baz\` on \`baz\`.\`rating\` = \`bar\`.\`rating\`
	where
	  \`foo\`.\`name\` <> 'Danny'
	  and \`bar\`.\`rating\` > 50
	  and \`baz\`.\`color\` = 'blue'
`;
